rust/cube/cubesqlplanner/cubesqlplanner/src/tests/integration/snapshots/cubesqlplanner__tests__integration__custom_granularities__calendar_year_by_origin_still_groups_by_calendar_year.snap
---
source: cubesqlplanner/src/tests/integration/custom_granularities.rs
expression: result
---
orders__created_at_calendar_year_by_origin | orders__count
-------------------------------------------+--------------
2024-01-01 00:00:00                        | 3            
2025-01-01 00:00:00                        | 5
