rust/cube/cubesqlplanner/cubesqlplanner/src/tests/integration/snapshots/cubesqlplanner__tests__integration__custom_granularities__custom_granularity_with_daterange_filter.snap
---
source: cubesqlplanner/src/tests/integration/custom_granularities.rs
expression: result
---
orders__created_at_half_year | orders__count | orders__total_amount
-----------------------------+---------------+---------------------
2024-01-01 00:00:00          | 5             | 150.00
