rust/cube/cubesqlplanner/cubesqlplanner/src/tests/integration/snapshots/cubesqlplanner__tests__integration__custom_granularities__fiscal_year_by_origin_does_not_group_by_calendar_year.snap
---
source: cubesqlplanner/src/tests/integration/custom_granularities.rs
expression: result
---
orders__created_at_fiscal_year_by_1st_april | orders__count
--------------------------------------------+--------------
2024-04-01 00:00:00                         | 5            
2025-04-01 00:00:00                         | 3
