rust/cube/cubesqlplanner/cubesqlplanner/src/tests/integration/snapshots/cubesqlplanner__tests__integration__custom_granularities__fiscal_year_with_offset.snap
---
source: cubesqlplanner/src/tests/integration/custom_granularities.rs
expression: result
---
orders__created_at_fiscal_year | orders__count
-------------------------------+--------------
2023-02-01 00:00:00            | 1            
2024-02-01 00:00:00            | 10           
2025-02-01 00:00:00            | 4
