rust/cube/cubesqlplanner/cubesqlplanner/src/tests/integration/snapshots/cubesqlplanner__tests__integration__custom_granularities__half_year_with_dimension.snap
---
source: cubesqlplanner/src/tests/integration/custom_granularities.rs
expression: result
---
orders__status | orders__created_at_half_year | orders__count
---------------+------------------------------+--------------
completed      | 2024-01-01 00:00:00          | 2            
processing     | 2024-01-01 00:00:00          | 2            
shipped        | 2024-01-01 00:00:00          | 1            
completed      | 2024-07-01 00:00:00          | 1            
processing     | 2024-07-01 00:00:00          | 2            
shipped        | 2024-07-01 00:00:00          | 2
