rust/cube/cubesqlplanner/cubesqlplanner/src/tests/integration/snapshots/cubesqlplanner__tests__integration__custom_granularities__type_time_alias_wraps_compound_exprs_before_tz_cast.snap
---
source: cubesqlplanner/cubesqlplanner/src/tests/integration/custom_granularities.rs
assertion_line: 166
expression: result
---
orders__fiscal_year_alias | orders__created_at_minus_one_day | orders__count
--------------------------+----------------------------------+--------------
2023-02-01 00:00:00       | 2024-01-14 10:00:00              | 1            
2024-02-01 00:00:00       | 2024-04-30 14:00:00              | 1            
2024-02-01 00:00:00       | 2024-06-14 08:00:00              | 1            
2024-02-01 00:00:00       | 2024-03-19 09:00:00              | 1            
2024-02-01 00:00:00       | 2025-01-19 10:00:00              | 1            
2024-02-01 00:00:00       | 2024-09-19 11:00:00              | 1            
2024-02-01 00:00:00       | 2024-11-14 14:00:00              | 1            
2024-02-01 00:00:00       | 2024-10-04 09:00:00              | 1            
2024-02-01 00:00:00       | 2024-08-09 10:00:00              | 1            
2024-02-01 00:00:00       | 2024-11-30 08:00:00              | 1            
2024-02-01 00:00:00       | 2024-02-09 11:00:00              | 1            
2025-02-01 00:00:00       | 2025-11-19 08:00:00              | 1            
2025-02-01 00:00:00       | 2025-07-14 09:00:00              | 1            
2025-02-01 00:00:00       | 2025-04-09 11:00:00              | 1            
2025-02-01 00:00:00       | 2025-08-31 14:00:00              | 1
